busstops/static/css/_base.scss
/* ... */
.services {
    a {
        align-items: center;
        display: flex;
        margin-bottom: 1em;
        white-space: normal;

        small {
            color: $text-color;
            white-space: nowrap;
            margin-left: 1em;
        }
    }

    a:hover {
        text-decoration: none;

        .description {
            text-decoration: underline;
        }
    }

    a:focus,
    a:active {
        color: $black;
    }
}

.name {
    border: 1px solid $border-color;
    color: $text-color;
    float: left;
    margin-right: 1em;
    padding: .125em .5em;
    text-align: center;

    &.is-short {
        font-size: 2em;
        font-variant-numeric: tabular-nums;
        line-height: 1em;
        margin-right: .5em;
        padding: .3125em .25em;
        white-space: nowrap;
    }

    + .name {
        border-left: 0;
        margin-left: -1em;
    }

    + .name.is-short {
        margin-left: -.5em;
    }
}

.has-smalls .name {
    margin-right: .75em;

    + .name {
        margin-left: -.75em;
    }

}

#buses-online {
    .button {
        margin-right: .5em;
    }
}

#map {
    bottom: 0;
    left: 0;
    position: relative;
    right: 0;
    top: 0;

    &.service-map.expanded {
        position: fixed;
    }
}

.journey {
    background: #fff;
    bottom: 0;
    display: none;
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 1;

    &:target {
        display: block;
    }

    .map {
        bottom: 0;
        left: 0;
        position: absolute;
        right: 0;
        top: 96px;
    }

    .leaflet-popup-content {
        margin: 10px;
    }

    .details {
        padding: 1em;

        p {
            margin-top: 0;
        }

        .button {
            position: absolute;
            top: 1em;
            right: 1em;
        }
    }

    .trip + .map {
        bottom: 200px;
    }

    .trip {
        background: #fff;
        bottom: 0;
        height: 168px;
        overflow-y: auto;
        position: absolute;
        padding: 1em;
        padding-top: 0;

        table {
            table-layout: fixed;
        }

        thead {
            background: #fff;
            position: sticky;
            top: 0;
        }

        th,
        td {
            border-left: 0;
        }

        td {
            padding: .25em 0;
            text-align: right;
            vertical-align: bottom;
        }

        th:first-child,
        td:first-child {
            text-align: left;
            width: 100%;
        }
    }
}

.service-map {
    display: none;
    margin-bottom: 50px;

    &.expanded {
        display: block;
        height: auto;
        z-index: 1;
    }
}

.trip-map-wrapper {
    margin: 1em -1em;
    position: sticky;
    top: 0;
}

.trip-map {
    height: 50vh;
}

.livery {
    display: inline-block;
    height: 1.5em;
    margin-right: .5em;
    vertical-align: text-top;
    width: 2.25em;
}

table .livery {
    margin: 0;
}

.bus {
    background: $white;
    border: 1px solid $white;
    height: 16px;
    line-height: 16px;
    overflow: hidden;
    fill: $text-color; // SVG text
    paint-order: stroke;

    text {
        stroke-linejoin: round;
        stroke-width: 2.5px;
        text-anchor: middle;
    }
}

.leaflet-marker-icon {
    &.just-arrow { // journey history arrow
        .arrow {
            border: 1px solid $white;
            border-left-color: transparent;
            border-top-color: transparent;
            box-shadow: 1px 1px $black;
            height: 5px;
            transform-origin: 8px 8px;
            width: 6px;
        }
    }

    &.leaflet-div-icon {
        background: none;
        border: 0;
        color: $text-color;
        font-size: 12px;
        text-align: center;
        white-space: nowrap;

        &:hover .bus,
        .selected {
            box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
        }

        .white-text {
            color: $white;
            fill: $white;
        }

        // bus arrow
        .arrow {
            border: 4px solid transparent;
            border-right: 5px solid $black;
            border-left: 0;
            left: -6px;
            position: absolute;
            top: 5px;
            transform-origin: 19px 4px;
        }
    }

    .stop-arrow,
    .rail {
        background: rgba(0, 0, 0, .6);
        border: 1px solid $white;
        border-radius: 0 8px 8px;
        height: 9px;
        width: 9px;
    }

    .no-direction,
    .rail {
        border-radius: 8px;
    }

    .rail {
        border-radius: 9px;
        height: 16px;
        line-height: 19px;
        width: 16px;
    }
}

.zoomed-out {
    .bus {
        height: 12px;
        width: 18px;
        margin: 2px 3px;
        font-size: 10px;
    }

    .leaflet-marker-icon.leaflet-div-icon .arrow {
        left: -3px;
        transform-origin: 16px 4px;
    }
}

#hugemap {
    .stop-arrow {
        position: absolute;
        top: 0;
        z-index: -1; // reveal indicator
        width: 14px;
        height: 14px;
    }

    .stop {
        color: #fff;
        font-size: 9px;
        line-height: 16px;
        text-align: center;

        &.stop-0 {
            .stop-arrow {
                height: 10px;
                left: 2px;
                top: 2px;
                width: 10px;
            }
        }

        &.stop-1 {  // one character - bigger text
            font-size: 11px;
        }
    }
}

.service-map,
.journey,
.trip-map {
    .stop-arrow {
        background: #fff;
        border: 2px solid #87f;
        height: 5px;
        width: 5px;
    }
}

.leaflet-bar {
    img {
        border: 0;
        padding-top: 5px;

        .leaflet-touch & {
            padding-top: 7px;
        }
    }
}

@keyframes materialize {
    0% {
        opacity: 100%;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 100%;
    }
}
/* ... */

